@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.10" 
+       version="2.0.11" 
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-	<import addon="script.module.parsedom" version="1.2.0"/>
+	<import addon="script.module.parsedom" version="1.3.0"/>
 	<import addon="script.module.simple.downloader" version="0.9.3"/>
-	<import addon="script.module.buggalo" version="1.0.1"/>
+	<import addon="script.module.buggalo" version="1.1.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
         <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-    <summary>Revision3: The Best TV Shows on the Internet</summary>
-    <description>The leading television network for the internet generation.</description>
+    <summary lang="en">Revision3: The Best TV Shows on the Internet</summary>
+    <description lang="en">The leading television network for the internet generation.</description>
     <platform>all</platform>
 	<language>en</language>
   </extension>
