@@ -4,8 +4,8 @@ import xbmc, xbmcgui, xbmcplugin, xbmcaddon, urllib, re, string, sys, os, time, 
 plugin =  'Revision3'
 __author__ = 'stacked <stacked.xbmc@gmail.com>'
 __url__ = 'http://code.google.com/p/plugin/'
-__date__ = '09-30-2012'
-__version__ = '2.0.10'
+__date__ = '11-25-2012'
+__version__ = '2.0.11'
 settings = xbmcaddon.Addon(id='plugin.video.revision3')
 buggalo.SUBMIT_URL = 'http://www.xbmc.byethost17.com/submit.php'
 dbg = False
@@ -25,50 +25,41 @@ common.plugin = plugin + ' ' + __version__
 import SimpleDownloader as downloader
 downloader = downloader.SimpleDownloader()
 
-def retry(ExceptionToCheck, tries=4, delay=3, backoff=2, logger=None):
-    """Retry calling the decorated function using an exponential backoff.
-
-    http://www.saltycrane.com/blog/2009/11/trying-out-retry-decorator-python/
-    original from: http://wiki.python.org/moin/PythonDecoratorLibrary#Retry
-
-    :param ExceptionToCheck: the exception to check. may be a tuple of
-        excpetions to check
-    :type ExceptionToCheck: Exception or tuple
-    :param tries: number of times to try (not retry) before giving up
-    :type tries: int
-    :param delay: initial delay between retries in seconds
-    :type delay: int
-    :param backoff: backoff multiplier e.g. value of 2 will double the delay
-        each retry
-    :type backoff: int
-    :param logger: logger to use. If None, print
-    :type logger: logging.Logger instance
-    """
+def retry(ExceptionToCheck, tries=11, delay=3, backoff=1, logger=None):
     def deco_retry(f):
         def f_retry(*args, **kwargs):
             mtries, mdelay = tries, delay
             try_one_last_time = True
-            while mtries > 1:
-                try:
-                    return f(*args, **kwargs)
-                    try_one_last_time = False
-                    break
-                except ExceptionToCheck, e:
-                    msg = "%s, Retrying in %d seconds..." % (str(e), mdelay)
-                    if logger:
-                        logger.warning(msg)
-                    else:
-                        print msg
-                    time.sleep(mdelay)
-                    mtries -= 1
-                    mdelay *= backoff
+            while mtries >= 0:
+				if mtries == 0:
+					dialog = xbmcgui.Dialog()
+					ret = dialog.yesno(plugin, settings.getLocalizedString( 30054 ), '', '', settings.getLocalizedString( 30052 ), settings.getLocalizedString( 30053 ))
+					if ret == False:
+						mtries, mdelay = tries, delay
+					else:
+						ok = dialog.ok(plugin, settings.getLocalizedString( 30051 ))
+						raise Exception("retry ERROR")
+				try:
+					return f(*args, **kwargs)
+					try_one_last_time = False
+					break
+				except ExceptionToCheck, e:
+					if mtries > 1:
+						msg = "%s, Retrying in %d seconds..." % (str(e), mdelay)
+						if logger:
+							logger.warning(msg)
+						else:
+							print msg
+						time.sleep(mdelay)
+						mdelay *= backoff
+					mtries -= 1
             if try_one_last_time:
                 return f(*args, **kwargs)
             return
-        return f_retry  # true decorator
+        return f_retry 
     return deco_retry
 
-@retry(IndexError, tries=4)
+@retry(IndexError)
 def build_main_directory(url):
 	path = url
 	html = open_url(url)
@@ -102,7 +93,7 @@ def build_main_directory(url):
 	setViewMode("515")
 	xbmcplugin.endOfDirectory(int(sys.argv[1]))
 
-@retry(IndexError, tries=4)
+@retry(IndexError)
 def build_sub_directory(url, name):
 	saveurl = url
 	studio = name
@@ -192,7 +183,7 @@ def build_sub_directory(url, name):
 	setViewMode("503")
 	xbmcplugin.endOfDirectory(int(sys.argv[1]))
 	
-@retry(IndexError, tries=4)
+@retry(IndexError)
 def get_video(url, name, plot, studio, episode, thumb, date):
 	result = open_url(url)
 	video_id = re.compile('player\.loadRevision3Item\(\'video_id\',(.+?)\);').findall(result)[0].replace(' ','')
@@ -258,7 +249,7 @@ def get_video(url, name, plot, studio, episode, thumb, date):
 			listitem.setInfo( type = "Video", infoLabels={ "Title": name, "Studio": studio, "Plot": plot, "Episode": int(episode), "Aired": date  } )
 			xbmcplugin.setResolvedUrl( handle = int( sys.argv[1] ), succeeded = True, listitem = listitem )
 
-@retry(IndexError, tries=4)
+@retry(IndexError)
 def build_search_directory(url):
 	if url == 'search':
 		try:
@@ -327,35 +318,44 @@ def ListItem(label, image, url, mode, isFolder, infoLabels = False, fanart = Fal
 	
 def open_url(url):
 	retries = 0
-	while retries < 4:
+	while retries < 11:
+		data = {'content': None, 'error': None}
 		try:
-			time.sleep(5*retries)
+			if retries != 0:
+				time.sleep(3)
 			data = get_page(url)
-			if len(data) > 0 and data != 'error':
-				return data
-			else:
-				retries += 1
-		except:
-			retries += 1
-	buggalo.addExtraData('url', url)
+			if data['content'] != None and data['error'] == None:
+				return data['content']
+		except Exception, e:
+			data['error'] = str(e)
+		retries += 1
 	dialog = xbmcgui.Dialog()
-	ok = dialog.ok(plugin, settings.getLocalizedString( 30023 ) + '\n' + settings.getLocalizedString( 30024 ))
-	raise Exception("open_url ERROR")
-	
+	ret = dialog.yesno(plugin, settings.getLocalizedString( 30050 ), data['error'], '', settings.getLocalizedString( 30052 ), settings.getLocalizedString( 30053 ))
+	if ret == False:
+		open_url(url)
+	else:
+		ok = dialog.ok(plugin, settings.getLocalizedString( 30051 ))
+		buggalo.addExtraData('url', url)
+		buggalo.addExtraData('error', data['error'])
+		raise Exception("open_url ERROR")
+		
 def get_page(url):
+	data = {'content': None, 'error': None}
 	try:
 		req = urllib2.Request(url)
 		req.add_header('User-Agent', 'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20100101 Firefox/15.0.1')
 		content = urllib2.urlopen(req)
-		data = content.read()
+		html = content.read()
 		content.close()
 		try:
-			return data.decode("utf-8")
+			data['content'] = html.decode("utf-8")
+			return data
 		except:
+			data['content'] = html
 			return data
 	except Exception, e:
-		buggalo.addExtraData('error', str(e))
-		return 'error'
+		data['error'] = str(e)
+		return data
 	
 def setViewMode(id):
 	if xbmc.getSkinDir() == "skin.confluence" and settings.getSetting('view') == 'true':
@@ -373,7 +373,18 @@ def clean_file(name):
         name=name.replace(old,new)
     return name
 
-params = common.getParameters(sys.argv[2])
+def getParameters(parameterString):
+    commands = {}
+    splitCommands = parameterString[parameterString.find('?') + 1:].split('&')
+    for command in splitCommands:
+        if (len(command) > 0):
+            splitCommand = command.split('=')
+            key = splitCommand[0]
+            value = splitCommand[1]
+            commands[key] = value
+    return commands
+
+params = getParameters(sys.argv[2])
 url = None
 name = None
 mode = None
